--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 
                                         <h5>Conception et implémentation d'une base de
                                             données</h5>
-                                        <p>Python / SQL</p>
+                                        <p>Cliquez ici pour en savoir plus</p>
 
                                     </div>
                                     <!-- /CONTAINER MID -->
@@ -231,7 +231,7 @@
                                     <div class="container-mid">
 
                                         <h5>Régression sur des données réelles</h5>
-                                        <p>RStudio / Excel</p>
+                                        <p>Cliquez ici pour en savoir plus</p>
 
                                     </div>
                                     <!-- /CONTAINER MID -->
@@ -285,7 +285,7 @@
 
                                         <h5>Apprendre en situation la production de
                                             données en entreprise.</h5>
-                                        <p>Excel / Word</p>
+                                        <p>Cliquez ici pour en savoir plus</p>
 
                                     </div>
                                     <!-- /CONTAINER MID -->
@@ -339,7 +339,7 @@
                                     <div class="container-mid">
 
                                         <h5>Création d'un reporting</h5>
-                                        <p>Excel / VBA</p>
+                                        <p>Cliquez ici pour en savoir plus</p>
 
                                     </div>
                                     <!-- /CONTAINER MID -->
